# rust_microservice_boilerplate

./: README.md
example_service/: Cargo.toml
example_service/src/: lib.rs  main.rs
example_service/tests/: health_check.rs
