[package]
name = "example_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository use workspace
[[bin]]
path = "src/main.rs"
name = "example_service"

[dependencies]
actix-web = "4.0.1"

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.9"